# dubsar

./: .clang-tidy  .gitignore  CLAUDE.md  CODEOWNERS  LICENSE  README.md  TODO  meson.build
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/: collections.dub  example.dub  example2.dub  interface.dub  quicksort.dub  sieve.dub
src/: ast.cpp  ast.h  diagnostics.cpp  diagnostics.h  lexer.l  main.cc  main.cpp  meson.build  parser.y  parser_types.h  printer.cpp  printer.h  resolver.cpp  resolver.h  symbol_table.cpp  symbol_table.h  type_checker.cpp  type_checker.h  types.cpp  types.h  unify.cpp  unify.h  visitor.h
testdata/: sort.ds  test.ds  test_class.ds
tests/: run_test.py
tests/fixtures/invalid/: bare_integer.dub  break_no_semicolon.dub  continue_no_semicolon.dub  duplicate_func.dub  duplicate_type.dub  incomplete_fun.dub  missing_brace.dub  missing_semicolon.dub  unknown_token.dub
tests/fixtures/valid/: base_types.dub  break.dub  compound_assign.dub  continue_stmt.dub  example2.dub  field_access.dub  field_access_assign.dub  field_access_chain.dub  for_expr_loop.dub  for_loop.dub  function_inferred.dub  function_ref_params.dub  function_typed.dub  init_list.dub  interface.dub  logical_not.dub  method_params.dub  methods.dub  nested_loops_break.dub  operators.dub  postfix_ops.dub  semantic_basic.dub  semantic_inferred.dub  semantic_struct_method.dub  sized_int.dub  string_type.dub  struct.dub  struct_inherit.dub  tuple_assign_chain_index.dub  tuple_assign_index.dub  tuple_assign_mixed.dub  tuple_typed_params.dub  var_no_init.dub  var_no_init_generic.dub  void_return.dub
